Revert "Add details about monitoring server and clients (#1936)"
This reverts commit 0358a648dfddcf80599914818a5226052ff0be66.

--- a/modules/client-configuration/pages/supported-features-alibaba.adoc
+++ b/modules/client-configuration/pages/supported-features-alibaba.adoc
@@ -125,10 +125,7 @@ The icons in this table indicate:
 | Power management
 | {question}
 
-| Monitoring server
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 
 | Docker buildhost
