--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -128,10 +128,7 @@ The icons in this table indicate:
 | Power management
 | {check}
 
-| Monitoring server
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 
 | Docker buildhost
