--- a/modules/client-configuration/pages/supported-features-debian.adoc
+++ b/modules/client-configuration/pages/supported-features-debian.adoc
@@ -158,11 +158,7 @@ The icons in this table indicate:
 | {check}
 | {check}
 
-| Monitoring server
-| {cross}
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 | {salt}
 
