--- a/modules/client-configuration/pages/supported-features-es.adoc
+++ b/modules/client-configuration/pages/supported-features-es.adoc
@@ -159,11 +159,7 @@ The icons in this table indicate:
 | {check}
 | {salt}
 
-| Monitoring server
-| {cross}
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 | {salt}
 
