--- a/modules/client-configuration/pages/supported-features-oracle.adoc
+++ b/modules/client-configuration/pages/supported-features-oracle.adoc
@@ -193,12 +193,7 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring server
-| {cross}
-| {cross}
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 | {salt}
 | {salt}
