--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -194,16 +194,10 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring server
-| {cross}
-| {cross}
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 | {salt}
 | {salt}
-
 
 | Docker buildhost
 | {cross}
