--- a/modules/client-configuration/pages/supported-features-rocky.adoc
+++ b/modules/client-configuration/pages/supported-features-rocky.adoc
@@ -162,11 +162,7 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring server
-| {cross}
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 | {salt}
 
