--- a/modules/client-configuration/pages/supported-features-sles.adoc
+++ b/modules/client-configuration/pages/supported-features-sles.adoc
@@ -200,12 +200,7 @@ The icons in this table indicate:
 | {check}
 | {check}
 
-| Monitoring server
-| {salt}
-| {salt}
-| {salt}
-
-| Monitored clients
+| Monitoring
 | {salt}
 | {salt}
 | {salt}
