--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -201,12 +201,7 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
-| Monitoring server
-| {cross}
-| {cross}
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 | {salt}
 | {salt}
