--- a/modules/client-configuration/pages/supported-features-almalinux.adoc
+++ b/modules/client-configuration/pages/supported-features-almalinux.adoc
@@ -161,11 +161,7 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring server
-| {cross}
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 | {salt}
 
