--- a/modules/client-configuration/pages/supported-features-amazon.adoc
+++ b/modules/client-configuration/pages/supported-features-amazon.adoc
@@ -125,10 +125,7 @@ The icons in this table indicate:
 | Power management
 | {question}
 
-| Monitoring server
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 
 | Docker buildhost
