--- a/modules/client-configuration/pages/supported-features-sle-micro.adoc
+++ b/modules/client-configuration/pages/supported-features-sle-micro.adoc
@@ -30,7 +30,7 @@ The icons in this table indicate:
 |===
 
 | Feature
-| {micro}
+| {micro} 
 | {opensuse}{nbsp}{microos}
 
 | Client
@@ -165,11 +165,7 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring server
-| {cross}
-| {cross}
-
-| Monitored clients
+| Monitoring
 | {salt}
 | {salt}
 
