Supported features tables fixed.

--- a/modules/client-configuration/pages/supported-features-ubuntu.adoc
+++ b/modules/client-configuration/pages/supported-features-ubuntu.adoc
@@ -442,6 +442,21 @@ ifeval::[{uyuni-content} == true]
 | {cross}
 | {cross}
 
+| Recurring Actions
+| {salt}
+| {salt}
+| {salt}
+
+| AppStreams
+| N/A
+| N/A
+| N/A
+
+| Yomi
+| N/A
+| N/A
+| N/A
+
 |===
 
 endif::[]
