Further clarification of the step in the procedure (#1954)
* Further clarification of the step in the procedure.

* Additional clarification.

* Adding changes requested in another bug.

* Update modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

* Update modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc

Co-authored-by: Karl Eichwalder <ke@suse.de>

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-k3s-installation.adoc
@@ -105,8 +105,18 @@ services:
     metallb.universe.tf/loadBalancerIPs: 192.168.122.241
 ----
 
+
+[NOTE]
+====
+The parameter [literal]``metallb.universe.tf/allow-shared-ip`` does not need changing.
+
+You need to adjust the parameter [literal]``metallb.universe.tf/loadBalancerIPs`` to your network setup.
+====
+
+
 To configure the storage of the volumes to be used by the {productname} Proxy pod, define persistent volumes for the following claims.
-For more informationm see https://kubernetes.io/docs/concepts/storage/persistent-volumes/ (kubernetes) or https://rancher.com/docs/k3s/latest/en/storage/ (k3s) documentation.
+If you do not customize the storage configuration, k3s will automatically create the storage volumes for you.
+
 The persistent volume claims are named:
 
 * [literal]``squid-cache-pv-claim``
@@ -129,3 +139,6 @@ tar xf /path/to/config.tar.gz
 helm install uyuni-proxy oci://registry.suse.com/suse/manager/4.3/proxy -f config.yaml -f httpd.yaml -f ssh.yaml -f custom-values.yaml
 ----
 endif::[]
+
+
+For more information see https://kubernetes.io/docs/concepts/storage/persistent-volumes/ (kubernetes) or https://rancher.com/docs/k3s/latest/en/storage/ (k3s) documentation.
