--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -129,7 +129,7 @@ endif::[]
 
 [IMPORTANT]
 ====
-{productname} performance depends on a number of factors, for example, underlying resources, network bandwidth, latency between clients and server etc.
+{productname} performance depends on hardware resources, network bandwidth, latency between clients and server, etc.
 
 Based on the experience and different deployments that are in use, the advice for optimal performance of {productname} Server with an adequate number of proxies is to not exceed 10,000 clients per single server.
 It is highly recommended to move to the Hub setup and involve consultancy when you have more than 10,000 clients.
