--- a/modules/reference/pages/admin/payg.adoc
+++ b/modules/reference/pages/admin/payg.adoc
@@ -1,5 +1,5 @@
 [ref-payg]]
-= {Payg}
+= {payg}
 
 The menu:Admin[{payg}] section allows you to view and manage {payg} instances.
 Every instance shows its description and connection data.
