--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -148,8 +148,9 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 
 When synchronizing third-party {debian} repositories, you will need to import the appropriate GPG key on the server.
 If the GPG key is missing, synchronization will fail.
- 
-Only the metadata is signed, therefore importing a GPG key for the software channel is not needed.
+
+For {debian} repositories, only the metadata is signed. Therefore importing a GPG key for the software channel is not needed.
+Packages will not be re-signed by Uyuni.
 
 To see which GPG keys are already imported to {productname} Server, run the following command:
 
