--- a/modules/client-configuration/pages/supported-features-almalinux.adoc
+++ b/modules/client-configuration/pages/supported-features-almalinux.adoc
@@ -162,7 +162,11 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring
+| Monitoring server
+| {cross}
+| {cross}
+
+| Monitored clients
 | {salt}
 | {salt}
 
