--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -194,7 +194,12 @@ The icons in this table indicate:
 | {salt}
 | {salt}
 
-| Monitoring
+| Monitoring server
+| {cross}
+| {cross}
+| {cross}
+
+| Monitored clients
 | {salt}
 | {salt}
 | {salt}
