sle micro channel names https://github.com/SUSE/spacewalk/issues/19391

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -156,11 +156,15 @@ To add the client tools, add these channels from the command prompt:
 | OS Version
 | Client Channel
 
-| x
-| x
+| {micro} 5.3
+| sle-micro-5.3-uyuni-client
 
-| {sles} 15 SP4
-| sles15-sp4-uyuni-client
+| {micro} 5.2
+| suse-microos-5.2-uyuni-client
+
+| {micro} 5.1
+| suse-microos-5.1-uyuni-client
+
 |===
 
 
