--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -148,7 +148,7 @@ ifeval::[{uyuni-content} == true]
 
 To add the client tools, add these channels from the command prompt:
 
-[[sle-tools-channels-cli]]
+[[sle-micro-tools-channels-cli]]
 [cols="1,1", options="header"]
 .SLE Micro Channels - CLI
 |===
