--- a/modules/client-configuration/pages/clients-debian.adoc
+++ b/modules/client-configuration/pages/clients-debian.adoc
@@ -146,6 +146,25 @@ For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc
 {debian} clients can require multiple GPG keys to be installed.
 ====
 
+When synchronizing third-party {debian} repositories, you will need to import the appropriate GPG key on the server.
+If the GPG key is missing, synchronization will fail.
+
+For {debian} repositories, only the metadata is signed. Therefore importing a GPG key for the software channel is not needed.
+Packages will not be re-signed by Uyuni.
+
+To see which GPG keys are already imported to {productname} Server, run the following command:
+
+----
+sudo gpg --homedir /var/lib/spacewalk/gpgdir --list-keys
+----
+
+To import a new GPG key, use the `--import` parameter:
+
+----
+sudo gpg --homedir /var/lib/spacewalk/gpgdir --import <filename>.gpg
+----
+
+
 
 == Root Access
 
