--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -3,9 +3,9 @@
 
 This section contains information about registering clients running these {nbsp}{micro} operating systems:
 
-* {micro}{nbsp}5.1, 5.2, and 5.3 {x86_64}
-* {micro}{nbsp}5.1, 5.2, and 5.3 {arm64}
-* {micro}{nbsp}5.1, 5.2, and 5.3 {zsystems} (s390x)
+* {micro}{nbsp}5.2, and 5.3 {x86_64}
+* {micro}{nbsp}5.2, and 5.3 {arm64}
+* {micro}{nbsp}5.2, and 5.3 {zsystems} (s390x)
 
 
 [WARNING]
@@ -56,15 +56,6 @@ The products you need for this procedure are:
 | OS Version
 | Product Name
 
-| {micro} 5.1 {x86_64}
-| SUSE Linux Enterprise Micro 5.1 x86_64
-
-| {micro} 5.1 {arm64}
-| SUSE Linux Enterprise Micro 5.1 aarch64
-
-| {micro} 5.1 {s390x}
-| SUSE Linux Enterprise Micro 5.1 s390x
-
 | {micro} 5.2 {x86_64}
 | SUSE Linux Enterprise Micro 5.2 x86_64
 
@@ -100,18 +91,6 @@ The channels you need for this procedure are:
 | OS Version
 | Base Channel
 | Updates Channel
-
-| {micro} 5.1 {x86_64}
-| suse-microos-5.1-pool-x86_64
-| suse-microos-5.1-updates-x86_64
-
-| {micro} 5.1 {arm64}
-| suse-microos-5.1-pool-arm64
-| suse-microos-5.1-updates-arm64
-
-| {micro} 5.1 {zsystems} ({s390x})
-| suse-microos-5.1-pool-s390x
-| suse-microos-5.1-updates-s390x
 
 | {micro} 5.2 {x86_64}
 | suse-microos-5.2-pool-x86_64
@@ -175,4 +154,13 @@ mgr-create-bootstrap-repo
 ----
 ////
 
-For more information on registering your clients, see xref:client-configuration:registration-overview.adoc[].
+[WARNING]
+====
+SLE Micro clients require reboot after registering.
+
+Reboot is automatically scheduled after registration is completed, but it is respecting the default reboot manager maintenance window.
+This window may be several hours after the client is registered.
+To speed up {micro} registration, manually reboot the client after the registration script finishes.
+====
+
+For more information about registering clients, see xref:client-configuration:registration-methods.adoc[].
