--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -121,19 +121,26 @@ zypper rm -u salt salt-minion python*-salt sle-manager-tools-release
 
 .Procedure: Salt Bundle Client - Manual Registration Cleanup
 
-To unregister, you could run: 
+. To unregister, run:
+----
+systemctl stop venv-salt-minion
+zypper rm -y venv-salt-minion
+rm -rf /etc/zypp/{credentials,services,repos}.d/* /etc/venv-salt-minion/*
+----
 
-# systemctl stop venv-salt-minion; zypper rm -y venv-salt-minion; rm -rf /etc/zypp/{credentials,services,repos}.d/* /etc/venv-salt-minion/*
-
-For information about the salt bundle, see: https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-saltbundle.html
+For information about the Salt bundle, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-saltbundle.html.
 
 
 
 
-Traditional Client - Manual Cleanup
+.Procedure: Traditional Client - Manual Cleanup
+
+. etc.
+
 NOTE: This process is only for SUSE Manager clients, do not run it on the SUSE Manager itself.
-NOTE: This process should NOT be followed for clients running Red Hat OS.
+NOTE: This process should not be issued for clients running Red Hat OS.
 
+----
 Stop the osad service (If it is in use):
  
 SLES 12: 
@@ -141,13 +148,18 @@ SLES 12:
 
 SLES 11:
     rcosad stop
+----
 
-In order to unregister a SUSE Manager client, several rpms must be removed. The following method should be tried first (in case there is no osad package, it should be omitted):
+To unregister a SUSE Manager client, several RPM packages must be removed.
+The following method should be tried first (in case there is no osad package, it should be omitted):
 
+----
 zypper rm -u spacewalksd spacewalk-check zypp-plugin-spacewalk spacewalk-client-tools osad python2-zypp-plugin-spacewalk python2-spacewalk-check python2-spacewalk-client-setup
- 
-  This will show the following:  
+----
 
+You will see the following output:
+
+----
 Refreshing service 'spacewalk'. 
 Loading repository data...
 Reading installed packages...
@@ -160,7 +172,8 @@ plugin-python osad
 5 packages to remove.
 After the operation, 301.0 KiB will be freed.
 Continue? [y/n/?] (y):
- 
+----
+
 The above rpm packages are client specific, and should be removed.
 If this fails, they should be manually removed. The commands "rpm -e" should not be used unless the "zypper rm" command above failed.  
 
