--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -154,7 +154,9 @@ To unregister a SUSE Manager client, several RPM packages must be removed.
 The following method should be tried first (in case there is no osad package, it should be omitted):
 
 ----
-zypper rm -u spacewalksd spacewalk-check zypp-plugin-spacewalk spacewalk-client-tools osad python2-zypp-plugin-spacewalk python2-spacewalk-check python2-spacewalk-client-setup
+zypper rm -u spacewalksd spacewalk-check zypp-plugin-spacewalk \
+spacewalk-client-tools osad python2-zypp-plugin-spacewalk \
+python2-spacewalk-check python2-spacewalk-client-setup
 ----
 
 You will see the following output:
@@ -174,28 +176,31 @@ After the operation, 301.0 KiB will be freed.
 Continue? [y/n/?] (y):
 ----
 
-The above rpm packages are client specific, and should be removed.
-If this fails, they should be manually removed. The commands "rpm -e" should not be used unless the "zypper rm" command above failed.  
+The above RPM packages are client specific, and should be removed.
+If this fails, they should be manually removed.
+The "rpm -e" command should not be used unless the "zypper rm" command above failed.
 
-rpm -e spacewalk-client-setup spacewalksd spacewalk-check zypp-plugin-spacewalk osad python2-zypp-plugin-spacewalk python2-spacewalk-check python2-spacewalk-client-setup
- 
 
 On SLES 15 client remove below packages if installed:
-rpm -e spacewalk-client-setup mgr-daemon spacewalk-check zypp-plugin-spacewalk mgr-osad python3-zypp-plugin-spacewalk python3-spacewalk-check python3-spacewalk-client-setup
 
-After this is complete, the following file should be removed: /etc/sysconfig/rhn/systemid.
-That file only exists on a client machine and is used to register itself with SUSE Manager.
+zypper rm -u spacewalk-client-setup mgr-daemon spacewalk-check \
+zypp-plugin-spacewalk mgr-osad python3-zypp-plugin-spacewalk \
+python3-spacewalk-check python3-spacewalk-client-setup
+
+After this is complete, the /etc/sysconfig/rhn/systemid file should be removed.
+This file only exists on a client machine and is used to register itself with SUSE Manager.
 
 rm /etc/sysconfig/rhn/systemid
- 
+
 Any configured spacewalk channels should be deleted with:
- 
 
 rm /etc/zypp/repos.d/spacewalk*
- 
-When this is done, the repositories should be refreshed on the server (zypper ref -s), and then listed (zypper lr), in order to make sure everything looks good.
 
-If any repositories pointing to spacewalk still exist, remove them using the following:
+When this is done, the repositories should be refreshed on the server (zypper ref -s), and then listed (zypper lr), to make sure everything looks good.
 
+If any repositories pointing to spacewalk still exist, remove them with:
+
+----
 zypper repos -d
 zypper removerepo <ID of the repo in the output from previous command>
+----
