--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -183,18 +183,24 @@ The "rpm -e" command should not be used unless the "zypper rm" command above fai
 
 On SLES 15 client remove below packages if installed:
 
+----
 zypper rm -u spacewalk-client-setup mgr-daemon spacewalk-check \
 zypp-plugin-spacewalk mgr-osad python3-zypp-plugin-spacewalk \
 python3-spacewalk-check python3-spacewalk-client-setup
+----
 
 After this is complete, the /etc/sysconfig/rhn/systemid file should be removed.
-This file only exists on a client machine and is used to register itself with SUSE Manager.
+This file only exists on a client machine and is used to register itself with SUSE Manager:
 
+----
 rm /etc/sysconfig/rhn/systemid
+----
 
 Any configured spacewalk channels should be deleted with:
 
+----
 rm /etc/zypp/repos.d/spacewalk*
+----
 
 When this is done, the repositories should be refreshed on the server (zypper ref -s), and then listed (zypper lr), to make sure everything looks good.
 
