Changing noop to none.

--- a/modules/specialized-guides/pages/large-deployments/hardware-reqs.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hardware-reqs.adoc
@@ -12,10 +12,10 @@ The minimum requirements for the {productname} Server are:
 * Fast I/O storage devices, such as locally attached SSDs.
     For PostgreSQL data directories, we recommend locally attached RAID-0 SSDs.
 
-If the {productname} Server is virtualized, enable the `elevator=noop` kernel command line option, for the best input/output performance.
+If the {productname} Server is virtualized, enable the `elevator=none` kernel command line option, for the best input/output performance.
 You can check the current status with [command]``cat /sys/block/<DEVICE>/queue/scheduler``.
 This command will display a list of available schedulers with the currently active one in brackets.
-To change the scheduler before a reboot, use [command]``echo noop > /sys/block/<DEVICE>/queue/scheduler``.
+To change the scheduler before a reboot, use [command]``echo none > /sys/block/<DEVICE>/queue/scheduler``.
 
 The minimum requirements for the {productname} Proxy are:
 
