--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -81,7 +81,7 @@ rm /var/cache/salt/master/thin/thin.tgz
 
 // Manual Registration Cleanup
 
-NOTE: This process is only for {productname} clients, do not run it on the {productname} Server itself.
+This process is only for {productname} clients, do not run it on the {productname} Server itself.
 
 [NOTE]
 ====
