Ccg SUSE Linux Enterprise Server with Expanded Support 9 #19568 keichwa (#1899)
* start with es9
https://github.com/SUSE/spacewalk/issues/19568
https://github.com/uyuni-project/uyuni-docs/issues/1897
* Update modules/client-configuration/pages/clients-sleses.adoc
Co-authored-by: Abid Mehmood <amehmood@suse.de>
* verified on refhead that it's EL9-Manager-Tools-Updates
Co-authored-by: Abid Mehmood <amehmood@suse.de>

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -79,6 +79,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {sll} 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {sles} ES 8
 | {x86_64}
 | {cross}
@@ -217,6 +222,11 @@ ifeval::[{uyuni-content} == true]
 | {opensuse} Leap 15
 | {x86_64}, {aarch64}
 | {check}
+| {check}
+
+| {sll} 9
+| {x86_64}
+| {cross}
 | {check}
 
 | {sles} ES 8
