--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -3,7 +3,7 @@
 
 
 
-If you want to migrate the registered {sle} client's service pack to a newer version, it can be done either on the command line or via {webui}.
+If you want to migrate the registered {sle} client's service pack (SP) to a newer version, it can be done either on the command line or via {webui}.
 
 This document describes and illustrates in detail the migration using the {webui}.
 
