--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -9,7 +9,7 @@ This document describes and illustrates in detail the migration using the {webui
 
 [NOTE]
 ====
-SP versions used are not reflective of the alctual latest versions available.
+SP versions used are not reflective of the actual latest versions available.
 They are used for illustration purposes only.
 ====
 
