--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -14,7 +14,7 @@ They are used for illustration purposes only.
 ====
 
 
-.Procedure: Migrating service pack to a newer version using Web UI
+.Procedure: Migrating service pack to a newer version using {webui}
 [role=procedure]
 
 
