--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -18,7 +18,7 @@ They are used for illustration purposes only.
 [role=procedure]
 
 
-. Login to SUMA Web UI and Go to menu:Admin[Products] and search for "SUSE Linux Enterprise Server 15 SP4 x86_64 (BETA)"
+. Log in to {productname} {webui} and navigate to menu:Admin[Products] and search for "SUSE Linux Enterprise Server 15 SP4 x86_64 (BETA)"
 . Select the recommended channels as shown.
 +
 image::upgradesles01.png[scaledwidth=80%]
