--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -38,7 +38,7 @@ image::upgradesles04.png[scaledwidth=80%]
 +
 image::upgradesles05.png[scaledwidth=80%]
 . Once the migration is complete. Check the status in menu:Events[History].
-. On the client side also you can verify by running commad
+. On the client side also you can verify it by running:
 +
 ----
 cat /etc/os-release
