--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -37,7 +37,7 @@ image::upgradesles04.png[scaledwidth=80%]
 . Now you may click on btn:[Schedule Migration] to actually migrate the server. Following message will get highlighted on top of the screen in SUMA Web UI.
 +
 image::upgradesles05.png[scaledwidth=80%]
-. Once the migration is complete. Check the status in menu:Events[History].
+. When the migration is complete, check the status in menu:Events[History].
 . On the client side also you can verify it by running:
 +
 ----
