--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -22,7 +22,7 @@ They are used for illustration purposes only.
 . Select the recommended channels.
 +
 image::upgradesles01.png[scaledwidth=80%]
-. Click btn:[Add Products] as shown below
+. Click btn:[Add Products].
 +
 image::upgradesles02.png[scaledwidth=80%]
 . Go to menu:Systems[registered client > Software > SP Migration]. It will show you 2 targets, SP3 and SP4. 
