--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -32,9 +32,11 @@ image::upgradesles03.png[scaledwidth=80%]
 +
 image::upgradesles04.png[scaledwidth=80%]
 . Select [literal]``Target Base Channel`` as [literal]``SLE-Product-SLES15-SP4-Pool for x86_64`` and keep [literal]``Allow Vendor Change`` unchecked.
-. Click on btn:[Schedule Migration] and it will highlight message [literal]``It is better to do a dry run first so continuing with dry run first.``
-. Click on btn:[Dry-run] and check the status of the simulation in menu:Events[History]. You should see a return code [literal]``0`` meaning successful.
-. Now you may click on btn:[Schedule Migration] to actually migrate the server. Following message will get highlighted on top of the screen in SUMA Web UI.
+. Click btn:[Schedule Migration] and it will highlight message [literal]``It is better to do a dry run first so continuing with dry run first.``
+. Click btn:[Dry-run] and check the status of the simulation in menu:Events[History].
+  You should see a return code [literal]``0`` meaning successful.
+. Now you may click btn:[Schedule Migration] to actually migrate the server.
+  Following message will get highlighted on top of the screen in {productname} {webui}.
 +
 image::upgradesles05.png[scaledwidth=80%]
 . When the migration is complete, check the status in menu:Events[History].
