--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -25,7 +25,8 @@ image::upgradesles01.png[scaledwidth=80%]
 . Click btn:[Add Products].
 +
 image::upgradesles02.png[scaledwidth=80%]
-. Go to menu:Systems[registered client > Software > SP Migration]. It will show you 2 targets, SP3 and SP4. 
+. Navigate to menu:Systems[registered client > Software > SP Migration].
+  You will see two targets, SP3 and SP4. 
 +
 image::upgradesles03.png[scaledwidth=80%]
 . Select literal:[SUSE Linux Enterprise Server 15 SP4 x86_64 (BETA)]. This will expand further as shown below.
