--- a/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
+++ b/modules/common-workflows/pages/workflow-sp-upgrade-webui.adoc
@@ -29,7 +29,8 @@ image::upgradesles02.png[scaledwidth=80%]
   You will see two targets, SP3 and SP4. 
 +
 image::upgradesles03.png[scaledwidth=80%]
-. Select literal:[SUSE Linux Enterprise Server 15 SP4 x86_64 (BETA)]. This will expand further as shown below.
+. Select [literal]``SUSE Linux Enterprise Server 15 SP4 x86_64 (BETA)``.
+  This will expand further as shown below.
 +
 image::upgradesles04.png[scaledwidth=80%]
 . Select [literal]``Target Base Channel`` as [literal]``SLE-Product-SLES15-SP4-Pool for x86_64`` and keep [literal]``Allow Vendor Change`` unchecked.
