--- a/modules/common-workflows/nav-common-workflows-guide.adoc
+++ b/modules/common-workflows/nav-common-workflows-guide.adoc
@@ -12,7 +12,7 @@ endif::[]
 ** xref:workflow-content-lifecycle-management.adoc[Content Lifecycle Management]
 
 ifeval::[{suma-content} == true]
-** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade of {sles} with {productname}]
+** xref:workflow-inplace-sles-upgrade.adoc[In-place Upgrade]
 endif::[]
 ** xref:workflow-sp-upgrade-webui.adoc[SP Upgrade via {webui}]
 ** xref:workflow-onboarding.adoc[Onboarding]
