suse liberty linux 9 clients

--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -79,6 +79,11 @@ ifeval::[{suma-content} == true]
 | {check}
 | {check}
 
+| {sll} 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {sles} ES 8
 | {x86_64}
 | {cross}
@@ -116,11 +121,6 @@ ifeval::[{suma-content} == true]
 
 | {debian} 10
 | {x86_64}
-| {cross}
-| {check}
-
-| {oracle} 9
-| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
@@ -224,6 +224,11 @@ ifeval::[{uyuni-content} == true]
 | {check}
 | {check}
 
+| {sll} 9
+| {x86_64}
+| {cross}
+| {check}
+
 | {sles} ES 8
 | {x86_64}
 | {cross}
@@ -266,11 +271,6 @@ ifeval::[{uyuni-content} == true]
 
 | {debian} 10
 | {x86_64}
-| {cross}
-| {check}
-
-| {oracle} 9
-| {x86_64}, {aarch64}
 | {cross}
 | {check}
 
@@ -334,9 +334,8 @@ endif::[]
 
 [NOTE]
 ====
-{debian} and {ubuntu} lists the {x86_64} architecture as amd64.
+{debian} and {ubuntu} list the {x86_64} architecture as {amd64}.
 ====
-
 
 //EOL clients
 include::snippets/eol-clients.adoc[]
