Ccg slemicro clienttools #19391 keichwa (#1978)
* Adjust the Uyuni and SUSE Manager 4.3 doc for SLE Micro
https://github.com/SUSE/spacewalk/issues/19391

--- a/modules/client-configuration/pages/clients-slemicro.adoc
+++ b/modules/client-configuration/pages/clients-slemicro.adoc
@@ -124,6 +124,37 @@ endif::[]
 
 
 
+ifeval::[{uyuni-content} == true]
+
+To add the client tools, add these channels from the command prompt:
+
+[[sle-micro-tools-channels-cli]]
+[cols="1,1", options="header"]
+.SLE Micro Channels - CLI
+|===
+
+| OS Version
+| Client Channel
+
+| {micro} 5.3
+| sle-micro-5.3-uyuni-client
+
+| {micro} 5.2
+| suse-microos-5.2-uyuni-client
+
+| {micro} 5.1
+| suse-microos-5.1-uyuni-client
+
+|===
+
+
+include::snippets/addchannels_novendor_cli.adoc[]
+
+
+endif::[]
+
+
+
 == Check Synchronization Status
 
 ifeval::[{suma-content} == true]
