use client instead of minion

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -30,15 +30,15 @@ For more information about the system set manager, see xref:client-configuration
 ====
 It is not possible to automatically clean up a traditional client after deleting it.
 You have to take care of this yourself.
-Furthermore cleaning up a Salt minion does not remove Salt itself.
+Furthermore cleaning up a Salt client does not remove Salt itself.
 ====
 
 [NOTE]
 ====
-Normally you migrate a traditional client to a Salt minion without deleting the client.
+Normally you migrate a traditional client to a Salt client without deleting the client.
 Salt automatically detects that you have a traditional client and does the necessary changes itself.
-But if you already deleted the traditional client and want to register it as a Salt minion again, see
-xref:administration:troubleshooting/tshoot-register-trad-as-salt-after-deletion.adoc[Troubleshooting Registering a traditional client as Salt minion after deleting it].
+But if you already deleted the traditional client and want to register it as a Salt client again, see
+xref:administration:troubleshooting/tshoot-register-trad-as-salt-after-deletion.adoc[].
 ====
 
 
