--- a/modules/client-configuration/pages/autoinst-intro.adoc
+++ b/modules/client-configuration/pages/autoinst-intro.adoc
@@ -42,7 +42,7 @@ These operating systems must be installed manually.
 ====
 
 The autoinstallation features of {productname} are based on a software named Cobbler.
-For more information about cobbler, see https://cobbler.readthedocs.io.
+For more information about Cobbler, see https://cobbler.readthedocs.io.
 
 [NOTE]
 ====
