--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -30,7 +30,7 @@ For more information about the system set manager, see xref:client-configuration
 ====
 It is not possible to automatically clean up a traditional client after deleting it.
 You have to take care of this yourself.
-Furthermore cleaning up a Salt client does not remove Salt itself.
+Furthermore, cleaning up a Salt client does not remove Salt itself.
 ====
 
 [NOTE]
@@ -85,7 +85,7 @@ This process is only for {productname} clients, do not run it on the {productnam
 
 [NOTE]
 ====
-You must not execute the following procedure on clients  running {rhel} and clones.
+You must not execute the following procedure on clients running {rhel} and clones.
 ====
 
 .Procedure: Salt Client
@@ -98,11 +98,13 @@ SLES 12/15:
 systemctl stop salt-minion
 ----
 +
+////
 SLES 11:
 +
 ----
 rcsalt stop
 ----
+////
 
 . Remove the repositories and configuration files:
 +
@@ -145,10 +147,10 @@ Stop the osad service (If it is in use):
  
 SLES 12: 
     systemctl stop osad
-
-SLES 11:
-    rcosad stop
 ----
+
+// SLES 11:
+//    rcosad stop
 
 To unregister a SUSE Manager client, several RPM packages must be removed.
 The following method should be tried first (in case there is no osad package, it should be omitted):
