--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -59,6 +59,8 @@ spacecmd system_delete FQDN
 salt-key -d FQDN
 ----
 
+
+
 [NOTE]
 ====
 For specific cases, the new registration of a deleted (unregistered) client might not be possible.
@@ -88,11 +90,9 @@ This process is only for {productname} clients, do not run it on the {productnam
 You must not execute the following procedure on clients running {rhel} and clones.
 ====
 
-.Procedure: Salt Client
+.Procedure: Deleting SLES 12 and 15 Salt Clients
 
 . Stop the salt-minion service:
-+
-SLES 12/15:
 +
 ----
 systemctl stop salt-minion
@@ -135,7 +135,7 @@ For information about the Salt bundle, see https://documentation.suse.com/suma/4
 
 
 
-.Procedure: Traditional Client - Manual Cleanup
+.Procedure: Traditional SLES 12 Clients - Manual Cleanup
 
 . etc.
 
@@ -143,14 +143,15 @@ NOTE: This process is only for SUSE Manager clients, do not run it on the SUSE M
 NOTE: This process should not be issued for clients running Red Hat OS.
 
 ----
-Stop the osad service (If it is in use):
- 
-SLES 12: 
-    systemctl stop osad
+Stop the osad service (if it is in use):
+
+systemctl stop osad
 ----
 
 // SLES 11:
 //    rcosad stop
+
+On SLES 12 client remove below packages if installed:
 
 To unregister a SUSE Manager client, several RPM packages must be removed.
 The following method should be tried first (in case there is no osad package, it should be omitted):
