--- a/modules/client-configuration/pages/autoinst-intro.adoc
+++ b/modules/client-configuration/pages/autoinst-intro.adoc
@@ -41,8 +41,11 @@ Autoinstallation of {ubuntu} and {debian} clients is not supported.
 These operating systems must be installed manually.
 ====
 
+The autoinstallation features of {productname} are based on a software named Cobbler.
+For more information about Cobbler, see https://cobbler.readthedocs.io.
+
 [NOTE]
 ====
-The autoinstallation features of {productname} are based on a software named Cobbler.
-For more information, see https://cobbler.readthedocs.io.
+{suse} only supports Cobbler functions that are available in the {productname} {webui}, or through the {productname} API.
+Only supported features are documented here.
 ====
