Make individual network arch more visible

--- a/modules/retail/pages/retail-network-arch.adoc
+++ b/modules/retail/pages/retail-network-arch.adoc
@@ -33,21 +33,21 @@ endif::[]
 
 You can use branch servers in different network configurations, depending on your installation requirements.
 
-Dedicated Network Architecture::
+=== Dedicated Network Architecture
 The branch servers are in the same network as the {productname} Server, and terminals use an isolated branch network.
 In this configuration, the branch servers are in the corporate network, and provide all DHCP, DNS, PXE, FTP, and TFTP services to the terminals in the branch networks.
 
 image::retail_dedicated_nic.png[scaledwidth=60%]
 
 
-External Network Architecture::
+=== External Network Architecture
 The branch servers are in separate branch networks, along with the terminals they manage.
 In this configuration, external routers provide DHCP and DNS services to the branch servers and the terminals, and the branch server provides PXE, FTP, and TFTP services to the terminals in their branch network.
 
 image::retail_external_network.png[scaledwidth=60%]
 
 
-Shared Network Architecture::
+=== Shared Network Architecture
 The branch server and the terminals are connected to the same network as the {productname} Server.
 In this configuration, external routers provide DHCP and DNS services to the branch servers and the terminals, and the branch server provides PXE, FTP, and TFTP services to the terminals in their branch network.
 
