--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -124,37 +124,37 @@ zypper rm -u salt salt-minion python*-salt sle-manager-tools-release
 .Procedure: Salt Bundle Client - Manual Registration Cleanup
 
 . To unregister, run:
++
 ----
 systemctl stop venv-salt-minion
 zypper rm -y venv-salt-minion
 rm -rf /etc/zypp/{credentials,services,repos}.d/* /etc/venv-salt-minion/*
 ----
 
-For information about the Salt bundle, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-saltbundle.html.
+For information about the Salt bundle, see xref:client-configuration:contact-methods-saltbundle.adoc[].
 
 
 
+This process is only for {productname} clients, do not run it on the {productname} Server itself.
+
+[NOTE]
+====
+You must not execute the following procedure on clients running {rhel} and clones.
+====
 
 .Procedure: Traditional SLES 12 Clients - Manual Cleanup
 
-. etc.
-
-NOTE: This process is only for SUSE Manager clients, do not run it on the SUSE Manager itself.
-NOTE: This process should not be issued for clients running Red Hat OS.
-
+. Stop the osad service (if it is in use):
++
 ----
-Stop the osad service (if it is in use):
-
 systemctl stop osad
 ----
 
 // SLES 11:
 //    rcosad stop
 
-On SLES 12 client remove below packages if installed:
-
-To unregister a SUSE Manager client, several RPM packages must be removed.
-The following method should be tried first (in case there is no osad package, it should be omitted):
+On a SLES 12 client remove the following  packages if installed.
+The following method should be tried first (in case there is no [package]``osad`` package, delete it from the list):
 
 ----
 zypper rm -u spacewalksd spacewalk-check zypp-plugin-spacewalk \
@@ -181,10 +181,10 @@ Continue? [y/n/?] (y):
 
 The above RPM packages are client specific, and should be removed.
 If this fails, they should be manually removed.
-The "rpm -e" command should not be used unless the "zypper rm" command above failed.
+The [command]``rpm -e`` command should not be used unless the [command]``zypper rm`` command above failed.
 
 
-On SLES 15 client remove below packages if installed:
+On a SLES 15 client remove the following packages if installed:
 
 ----
 zypper rm -u spacewalk-client-setup mgr-daemon spacewalk-check \
@@ -192,15 +192,15 @@ zypp-plugin-spacewalk mgr-osad python3-zypp-plugin-spacewalk \
 python3-spacewalk-check python3-spacewalk-client-setup
 ----
 
-After this is complete, the /etc/sysconfig/rhn/systemid file should be removed.
-This file only exists on a client machine and is used to register itself with SUSE Manager:
-
+. After this is complete, the /etc/sysconfig/rhn/systemid file should be removed.
+  This file only exists on a client machine and is used to register itself with SUSE Manager:
++
 ----
 rm /etc/sysconfig/rhn/systemid
 ----
 
-Any configured spacewalk channels should be deleted with:
-
+. Any configured spacewalk channels should be deleted with:
++
 ----
 rm /etc/zypp/repos.d/spacewalk*
 ----
