--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -205,7 +205,13 @@ rm /etc/sysconfig/rhn/systemid
 rm /etc/zypp/repos.d/spacewalk*
 ----
 
-When this is done, the repositories should be refreshed on the server (zypper ref -s), and then listed (zypper lr), to make sure everything looks good.
+. Finally  verify that repositories are properly configured.
+  Refresh them on the server and then list them:
++
+----
+zypper ref -s
+zypper lr
+----
 
 If any repositories pointing to spacewalk still exist, remove them with:
 
