Changing noop to none.

--- a/modules/installation-and-upgrade/pages/server-setup.adoc
+++ b/modules/installation-and-upgrade/pages/server-setup.adoc
@@ -168,7 +168,7 @@ To disable _Transparant Huge Pages_ set the [option]``transparent_hugepage`` ker
 This has to be changed in [path]``/etc/default/grub`` and added to the line [option]``GRUB_CMDLINE_LINUX_DEFAULT``, for example:
 
 ----
-GRUB_CMDLINE_LINUX_DEFAULT="resume=/dev/sda1 splash=silent quiet showopts elevator=noop transparent_hugepage=never"
+GRUB_CMDLINE_LINUX_DEFAULT="resume=/dev/sda1 splash=silent quiet showopts elevator=none transparent_hugepage=never"
 ----
 
 To write the new configuration run [command]``grub2-mkconfig -o /boot/grub2/grub.cfg``.
