--- a/modules/installation-and-upgrade/pages/uyuni-server-setup.adoc
+++ b/modules/installation-and-upgrade/pages/uyuni-server-setup.adoc
@@ -170,7 +170,7 @@ You will also need to open the [path]``/etc/default/grub`` file and add or edit 
 For example:
 
 ----
-GRUB_CMDLINE_LINUX_DEFAULT="resume=/dev/sda1 splash=silent quiet showopts elevator=noop transparent_hugepage=never"
+GRUB_CMDLINE_LINUX_DEFAULT="resume=/dev/sda1 splash=silent quiet showopts elevator=none transparent_hugepage=never"
 ----
 
 To write the new configuration run [command]``grub2-mkconfig -o /boot/grub2/grub.cfg``.
