List new pages in retail overview

--- a/modules/retail/nav-retail-guide.adoc
+++ b/modules/retail/nav-retail-guide.adoc
@@ -23,7 +23,6 @@ ifeval::[{uyuni-content} == true]
 *** xref:retail-uyuni-branchserver.adoc[Uyuni Retail Branch Server]
 endif::[]
 *** xref:retail-install-setup.adoc[Set Up Retail Environment]
-*** xref:containerized-saltboot.adoc[Set Up Retail Environment using Containerized Proxy]
 // Terminal ops
 ** xref:retail-deploy-section.adoc[Deploying Terminals]
 *** xref:retail-deploy-terminals.adoc[Terminal Deployment Basics]
@@ -40,12 +39,16 @@ endif::[]
 *** xref:retail-delta-images.adoc[Delta Images]
 *** xref:retail-admin-network.adoc[Network Administration]
 ** xref:retail-migration-intro.adoc[Retail Migration]
-
 ifeval::[{suma-content} == true]
 *** xref:retail-prepare-migration.adoc[Prepare for Migration]
 *** xref:retail-migration-slepostosuma.adoc[Migrate SLEPOS to SUMA]
 endif::[]
 *** xref:retail-upgrade-branchserver.adoc[Upgrade Branch Server]
+** xref:example-configurations.adoc[Example configurations]
+*** xref:dedicated-with-formulas.adoc[Dedicated terminal network configured using formulas]
+*** xref:dedicated-with-scripts.adoc[Dedicated terminal network configured using scripts]
+*** xref:shared-central-dns.adoc[Shared network with centralized DNS]
+*** xref:containerized-saltboot.adoc[Retail Environment using Containerized Proxy]
 ** xref:retail-next.adoc[What Next?]
 
 ifdef::backend-pdf[]
