--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -63,14 +63,15 @@ See xref:retail-terminal-names.adoc[] for explanation of possible configurations
 
 [IMPORTANT]
 ====
-Containerized retail workflow no longer manages DHCP server. DHCP formula can still be used to manage 
+Containerized retail workflow no longer manages DHCP server. External DHCP service must be used.
 ====
 
 Containerized workflow relies on updated image building in {productname} Server 4.3 where PXE images are no longer collected as bundle, but kernel, initrd and filesystem image are collected individually.
 
 Containerized workflow uses new TFTP container which instead of providing files present on the proxy, routes specific TFTP requests as HTTP requests through proxy local squid proxy to {productname} Server.
 
-Leveraging these two improvements it is no longer needed to call `image-sync` state after image is build and images are immediately available to the saltboot clients.
+Leveraging these two improvements and the fact that containerized proxy is not a salt client, it is no longer possible to call [systemitem]``image-sync`` state.
+After image is build images are immediately available to the saltboot clients. This may have implications on how images are deployed to production.
 
 Following documents differences between containerized and regular workflow. Both are assuming proxy (containerized or in form of {smr} Branch Server) are available.
 
@@ -87,7 +88,7 @@ Non-Containerized workflow:
 . Configure and apply Retail formulas on {productname} {smr} Proxy
 . Create [systemitem]``server group`` with the name of Branch ID as set in retail formulas
 . Build saltboot image
-. Apply `image-sync` state on configured {productname} {smr} Proxy
+. Apply [systemitem]``image-sync`` state on configured {productname} {smr} Proxy
 . Boot system to be deployed
 
 == Example Configuring DHCP for PXE booting
