Fixes from unit tests
- apparently no comments and ifeval need emptry line before
- fix wrong xref

--- a/modules/retail/pages/containerized-saltboot.adoc
+++ b/modules/retail/pages/containerized-saltboot.adoc
@@ -17,7 +17,7 @@ Containerized workflow requires rebuild of PXE images using {productname} Server
 
 [IMPORTANT]
 ====
-Containerized workflow not longer implicitly configure DHCP for PXE booting. See xref:specialized-guides/salt/salt-formula-dhcpd.adoc[] how to use DHCP formula to configure DHCP server.
+Containerized workflow not longer implicitly configure DHCP for PXE booting. See xref:specialized-guides:salt/salt-formula-dhcpd.adoc[] how to use DHCP formula to configure DHCP server.
 
 Without using DHCP formula, make sure your DHCP server has correct PXE booting setting pointing to containerized proxy. See below for example.
 ====
